--- a/extensions/pom.xml
+++ b/extensions/pom.xml
@@ -180,9 +180,9 @@
 			</exclusions>
 		</dependency>
 		<dependency>
-			<groupId>org.owasp.esapi</groupId>
-			<artifactId>esapi</artifactId>
-			<version>${esapi.version}</version>
+			<groupId>org.owasp.encoder</groupId>
+			<artifactId>encoder</artifactId>
+			<version>${owasp.encoder.version}</version>
 			<scope>compile</scope>
 			<exclusions>
 				<exclusion>
