[BACKLOG-12101] Added xmlgraphics-commons 1.5 as dependency as it's introduced in pentaho-library/libloader.

--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -75,6 +75,7 @@
     <jackcess.version>1.2.6</jackcess.version>
     <mail.version>1.4.7</mail.version>
     <hibernate-ehcache.version>3.6.9.Final</hibernate-ehcache.version>
+    <xmlgraphics-commons.version>1.5</xmlgraphics-commons.version>
   </properties>
   <modules>
 
@@ -1752,6 +1753,17 @@
         <groupId>xalan</groupId>
         <artifactId>xalan</artifactId>
         <version>${xalan.version}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>*</groupId>
+            <artifactId>*</artifactId>
+          </exclusion>
+      </exclusions>
+     </dependency>
+     <dependency>
+        <groupId>org.apache.xmlgraphics</groupId>
+        <artifactId>xmlgraphics-commons</artifactId>
+        <version>${xmlgraphics-commons.version}</version>
         <exclusions>
           <exclusion>
             <groupId>*</groupId>
