--- a/core/pom.xml
+++ b/core/pom.xml
@@ -544,6 +544,12 @@
 			<artifactId>pentaho-metadata</artifactId>
 			<version>${project.version}</version>
 			<scope>compile</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>org.owasp.esapi</groupId>
+					<artifactId>esapi</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>pentaho</groupId>
