--- a/core/pom.xml
+++ b/core/pom.xml
@@ -549,6 +549,10 @@
 					<groupId>org.owasp.esapi</groupId>
 					<artifactId>esapi</artifactId>
 				</exclusion>
+				<exclusion>
+					<groupId>xalan</groupId>
+					<artifactId>xalan</artifactId>
+				</exclusion>
 			</exclusions>
 		</dependency>
 		<dependency>
