BACKLOG-18919 - authN successfull

--- a/assemblies/pentaho-solutions/src/main/resources/pentaho-solutions/system/applicationContext-security-foundry.properties
+++ b/assemblies/pentaho-solutions/src/main/resources/pentaho-solutions/system/applicationContext-security-foundry.properties
@@ -1,6 +1,6 @@
-useHttps=true
+useHttps=false
 hostname=172.20.50.95
-port=8000
+port=8889
 realm=Pentaho MSAD
 grantType=password
 clientId=angular_shiro
